small tweaks, adding more information

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -15,19 +15,22 @@
   <div id="TopContent">
 
   </div>
-  <div style="position: relative;width: 100%;height: 90vh;overflow: hidden; ">
+  
+  <div  class="d-none d-sm-block" style="position: relative;width: 100%;height: 90vh;overflow: hidden; ">
   <iframe class="parallaxVid" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; loop; picture-in-picture; web-share" title="Rangeview Intermediate Website" src="https://www.youtube.com/embed/CRmxjF34YgY?autoplay=1&loop=1&mute=1&amp;controls=0&amp;rel=0&amp;playsinline=1&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fwww.rangeview.school.nz&amp;widgetid=1&playlist=CRmxjF34YgY" id="widget2" style="position: absolute;width: 100%; height:115vh; width:204vh; margin:auto; transform: translate(-50%,-120px);"></iframe>
   <div class="parallaxInner"><b><i>Wisdom with truth - Whakaaronui me ta pono</i></b></div>
 </div>
 
-  <!--
-  <div class="d-none d-sm-block">
+  
+  <div class="d-block d-sm-none">
  
-    <div class="parallaxSection" style='background-image: url("../Images/Studio_Project_V2.gif"); height: 35vw; transform: translate(0,30px);background-position: center;'>
+    <div class="parallaxSection" style='background-image: url("../Images/BirdEyeCroppedMore.jpeg"); height: 30vh; transform: translate(0,10px);background-position: top; margin-bottom:0;'>
 
     </div>
+    <h1 class="bg-dark" style="width:auto; margin-top: 10px; margin-right: auto; margin-left: auto;"><i>Wisdom with truth - Whakaaronui me ta pono</i>
+    </h1>
   </div>
-
+<!--
   <div class="d-block d-sm-none">
     <div class="parallaxSection"
       style='  background-size: cover;background-image: url("../Images/Studio_Project_V2.gif"); height: 50vh; background-position: top;'>
@@ -71,7 +74,7 @@
 
 
   </div>-->
-  <div class="riseContainer">
+  <div class="riseContainer mt-1" id="Pb4l">
     <img src="../Images/Rise values portrait/1.png" class="risePortrait">
     <img src="../Images/Rise values portrait/2.png" class="risePortrait">
     <img src="../Images/Rise values portrait/3.png" class="risePortrait">
@@ -81,9 +84,9 @@
 
 
 
-  <div class="pb-3 pt-3"style="width: 100%; margin-left: 0px; background-image:     linear-gradient(to right, rgba(255, 255, 255, 0.733), rgba(255, 255, 255, 0.353)),
+  <div class=" pt-3 mt-1"style="width: 100%; margin-left: 0px; background-image:     linear-gradient(to right, rgba(255, 255, 255, 0.733), rgba(255, 255, 255, 0.353)),
   url('../Images/IMG_1003-flip.jpeg'); background-position: left;">
-    <div class="container pb-3" >
+    <div class="container " >
       <div class="row">
       <div class="col-sm-8">
         <h3>PB4L at Rangeview - R.I.S.E values</h3>
