--- a/Pages/Staff.html
+++ b/Pages/Staff.html
@@ -23,42 +23,43 @@
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email
+          </p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2 ">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
 
@@ -69,35 +70,35 @@
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
 
@@ -105,42 +106,42 @@
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
 
@@ -151,35 +152,35 @@
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
     <div class="col-sm-2">
       <div class="card">
         <img src="../Images/me ong.png"  width="100%">  
         <h3>Member</h3>
-        <p>Staff member information.</p>
+        <p>Staff member information. <br> Email</p>
       </div>
     </div>
   </div>
