--- a/Pages/SchoolInfo.html
+++ b/Pages/SchoolInfo.html
@@ -15,12 +15,12 @@
 
     </div>
 
-    <div class="fixedParallax" style="background-image:     linear-gradient(to right, white, rgba(255, 62, 62, 0.336)),
+    <div class="fixedParallax" style="background-image: 
     url('../Images/IMG_1684.jpeg'); background-position: right; margin-top: -11px;">
 
         <div class="container mt-5">
             <div class="row" id="SportInfo">
-                <div class="col-sm-6">
+                <div class="col-sm-6" style="background-color: rgb(255, 255, 255); border-left: 1000px white;">
                     <h1>Sport at Rangeview</h1>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore impedit animi officiis dolorem
@@ -34,6 +34,7 @@
                         molestiae veniam!
                     </p>
                 </div>
+                
             </div>
         </div>
     </div>
@@ -154,6 +155,10 @@
             </div>
         </div>
     </div>
+
+
+
+
     <div id="Footer">
 
     </div>
