extra-curricular info

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -85,7 +85,7 @@
 
 
   <div class=" pt-3 mt-1"style="width: 100%; margin-left: 0px; background-image:     linear-gradient(to right, rgba(255, 255, 255, 0.733), rgba(255, 255, 255, 0.353)),
-  url('../Images/IMG_1003-flip.jpeg'); background-position: left;">
+  url('../Images/IMG_1003-flip.jpeg'); background-position: center; background-size: cover;">
     <div class="container " >
       <div class="row">
       <div class="col-sm-8">
