completed extracurricular page

--- a/Pages/ExtraCurricular.html
+++ b/Pages/ExtraCurricular.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src='https://code.jquery.com/jquery-3.6.3.min.js'></script>
 </head>
 
@@ -18,8 +20,8 @@
     <!--<div class="fixedParallax" style="background-image: linear-gradient(to right, white, white 50%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0)),
     url('../Images/IMG_1684.jpeg'); background-position: right; margin-top: -11px;">-->
 
-    <div class="container mt-5">
-        <div class="row" id="SportInfo">
+    <div class="container mt-5" id="SportInfo">
+        <div class="row">
             <div class="col-sm-6" style="background-color: rgb(255, 255, 255);">
                 <h1>Sport at Rangeview</h1>
                 <p>
@@ -34,18 +36,18 @@
                     molestiae veniam!
                 </p>
             </div>
-            <div class=" col-sm-6" style="background-image:
-    url('../Images/IMG_1684.jpeg'); background-position: right; margin-top: -11px; background-size: cover;"></div>
-
+            <div class="col-sm-6">
+                <img src="../Images/IMG_1684.jpeg" style="width: 100%;">
+            </div>
         </div>
     </div>
 
+    <hr>
 
-
-    <div class="container mt-5">
-        <div class="row" id="SportInfo">
+    <div class="container mt-1">
+        <div class="row">
             <div class="col-sm-8">
-                <div class="container mt-5">
+                <div class="container">
                     <!-- Sport info for each sport-->
                     <div id="sportCarousel" class="carousel slide">
                         <div class="carousel-inner">
@@ -158,8 +160,8 @@
 
         </div>
     </div>
-    <hr class="mt-4">
-    <div class="container-fluid pt-1 pb-3 altSection" id="whatsOn">
+    <hr class="mt-4" id="KapaHaka">
+    <div class="container-fluid pt-1 pb-3 altSection">
         <div class="container mt-2">
             <div class="row  altSection">
                 <h1>Kapa Haka</h1>
@@ -174,9 +176,9 @@
                 </div>
             </div>
         </div>
-        </div>
-        <hr class="mt-4">
-        <div class="container mt-2">
+    </div>
+    <hr class="mt-4" id="Pasifika">
+    <div class="container mt-2">
         <div class="row">
 
             <div class="col-sm-8">
@@ -191,7 +193,112 @@
             </div>
         </div>
     </div>
-    </div></div>
+    <hr class="mt-4" id="LeaderShip">
+    <div class="container-fluid mt-2 ">
+        <div class="container">
+            <div class="row mb-4">
+                <h1>Leadership Academy</h1>
+                <div class="col-sm-6" style="border-right: 1px solid gray;">
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia excepturi sequi dolores eos
+                        fugiat possimus sapiente rerum hic ut tempore, beatae quam explicabo similique nemo officiis
+                        itaque repudiandae ipsa cum.
+                    </p>
+                </div>
+                <div class="col-sm-6" style="text-align: center;">
+                    <div class="row">
+                        <div class="col-sm-6 pdf-dl">
+                            <a href="../Files/Leadership_Academy_2022.pdf" class=" d-flex"
+                                style="align-items: center; justify-content: center;">
+
+                                <h2 class="fa-solid fa-file-pdf p-3" style=" color: brown;font-family: FontAwesome;">
+                                    &#xf1c1;
+                                </h2>
+                                <h4>Leadership Academy 2022</h4>
+                            </a>
+                        </div>
+                        <div class="col-sm-6 pdf-dl">
+                            <a href="../Files/Student_leader_2022.pdf" class=" d-flex"
+                                style="align-items: center; justify-content: center;">
+
+                                <h2 class="fa-solid fa-file-pdf p-3" style=" color: brown;font-family: FontAwesome;">
+                                    &#xf1c1;
+                                </h2>
+                                <h4>Student leader 2022</h4>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6 pdf-dl">
+                            <a href="../Files/Leadership_Academy_Brochure_2015.pdf" class=" d-flex"
+                                style="align-items: center; justify-content: center;">
+
+                                <h2 class="fa-solid fa-file-pdf p-3" style=" color: brown;font-family: FontAwesome;">
+                                    &#xf1c1;
+                                </h2>
+                                <h4>Leadership Academy Brochure 2015</h4>
+                            </a>
+                        </div>
+                        <div class="col-sm-6 pdf-dl">
+                            <a href="../Files/Extended_Leadership_Session.pdf" class=" d-flex"
+                                style="align-items: center; justify-content: center;">
+
+                                <h2 class="fa-solid fa-file-pdf p-3" style=" color: brown;font-family: FontAwesome;">
+                                    &#xf1c1;
+                                </h2>
+                                <h4>Extended Leadership Session</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <img src="../Images/leadership1.jpg" style="width: 100%;">
+            </div>
+        </div>
+        <hr id="Library">
+        <div class="container mt-5">
+            <div class="row">
+                <h1 style="width:auto; margin-right: auto; margin-left: auto;">Learning Center - Library</h1>
+            </div>
+            <div class="row" style="padding: 0px;">
+                <img src="../Images/Library1.jpeg" style="margin: 0px;width: 100%; ">
+            </div>
+            <div class="row">
+                <div class="col-sm-4 pt-4 p-5" style="background-color: var(--licorice); color: var(--platinum);">
+                    <h2>Library hours: Mon-Thurs 8:30am – 3:30pm </h2>
+
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde ex, dignissimos ipsam reiciendis
+                        dicta, id quis blanditiis consequuntur impedit cum rem fuga corporis aliquam aspernatur harum
+                        ullam obcaecati, sed delectus!
+                    </p>
+                </div>
+
+                <div class="col-sm-4 pt-4 p-5">
+                    <h2 class="m-4">Borrowing limits</h2>
+
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde ex, dignissimos ipsam reiciendis
+                        dicta, id quis blanditiis consequuntur impedit cum rem fuga corporis aliquam aspernatur harum
+                        ullam obcaecati, sed delectus!
+                    </p>
+                </div>
+                <div class="col-sm-4 pt-4 p-5" style="background-color: var(--xanthous)" ;>
+                    <h2>Rangeview Readers Book Club</h2>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde ex, dignissimos ipsam reiciendis
+                        dicta, id quis blanditiis consequuntur impedit cum rem fuga corporis aliquam aspernatur harum
+                        ullam obcaecati, sed delectus!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+
+    </div>
 
 
 
@@ -200,6 +307,11 @@
     <div id="Footer">
 
     </div>
+
+    <style>
+
+    </style>
+
     <script src="../Js/Script.js"></script>
     <link href="../CSS/Style.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
