updated navbar colours

--- a/Pages/LayoutTop.html
+++ b/Pages/LayoutTop.html
@@ -1,3 +1,4 @@
+<link href="../CSS/Style.css" rel="stylesheet">
 <!--Contact us offcanvas-->
 <div class="offcanvas offcanvas-bottom h-auto" id="contactUs">
   <div class="offcanvas-header">
