--- a/Pages/ExtraCurricular.html
+++ b/Pages/ExtraCurricular.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Site</title>
+    <title>Extra-Curricular</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
