--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -1,62 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <title>Site</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src='https://code.jquery.com/jquery-3.6.3.min.js'></script>
-</head>
-
-<body>
-
+ <head>
+  <title>
+   Site
+  </title>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js">
+  </script>
+ </head>
+ <body>
   <div id="TopContent">
-
   </div>
-
-
-
-
   <div class="d-none d-sm-block" style="position: relative;width: 100%;height: 70vh;overflow: hidden; ">
-    <div class="parallaxVid row"
-      style="position: absolute;width: 100%; height:115vh; width:204vh; margin:auto; transform: translate(-50%,-120px);">
-      <div class="col-sm-4"
-        style='background-image: url("../Images/IMG_1686_Flip.jpeg"); background-position: center; background-size: cover;'>
-
-      </div>
-      <div class="col-sm-4"
-        style='background-image: url("../Images/IMG_1972.jpeg"); background-position: 25% 30%; background-size: 150%; '>
-
-      </div>
-      <div class="col-sm-4"
-        style='background-image: url("../Images/IMG_1679.jpeg"); background-position: center; background-size: cover;'>
-
-      </div>
-
+   <div class="parallaxVid row" style="position: absolute;width: 100%; height:115vh; width:204vh; margin:auto; transform: translate(-50%,-120px);">
+    <div class="col-sm-4" style='background-image: url("../Images/IMG_1686_Flip.jpeg"); background-position: center; background-size: cover;'>
     </div>
+    <div class="col-sm-4" style='background-image: url("../Images/IMG_1972.jpeg"); background-position: 25% 30%; background-size: 150%; '>
+    </div>
+    <div class="col-sm-4" style='background-image: url("../Images/IMG_1679.jpeg"); background-position: center; background-size: cover;'>
+    </div>
+   </div>
   </div>
-
-  <div class="container mt-5 ">
-    <div class="row">
-      <h1>Our School</h1>
-      <div class="col-sm-12">
-
-        <iframe class="d-block d-sm-none" style="float: left; padding: 10px" width="100%" height="315"
-          src="https://www.youtube.com/embed/CRmxjF34YgY" title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
-
-        <iframe class="d-none d-sm-block" style="float: left; padding: 10px" width="50%" height="315"
-          src="https://www.youtube.com/embed/CRmxjF34YgY" title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
-
-
-        <p>
-
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus
+  <div class="container mt-5">
+   <div class="row">
+    <h1>
+     Our School
+    </h1>
+    <div class="col-sm-12">
+     <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" class="d-block d-sm-none" frameborder="0" height="315" src="https://www.youtube.com/embed/CRmxjF34YgY" style="float: left; padding: 10px" title="YouTube video player" width="100%">
+     </iframe>
+     <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" class="d-none d-sm-block" frameborder="0" height="315" src="https://www.youtube.com/embed/CRmxjF34YgY" style="float: left; padding: 10px" title="YouTube video player" width="50%">
+     </iframe>
+     <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim metus tortor, sit amet ullamcorper metus
           elementum sit amet. Morbi lectus magna, commodo eu vulputate ac, rutrum in mauris. Donec ornare, diam id
           sodales facilisis, felis neque vulputate massa, id condimentum leo enim eu sem. Maecenas quam nunc, elementum
           finibus tortor vehicula, porttitor commodo urna. Aenean congue, dolor ut fermentum tincidunt, felis elit
@@ -72,26 +51,21 @@
           augue, id lobortis lectus purus sed elit. Vivamus pretium arcu quis diam porttitor lobortis. Mauris et
           venenatis tellus. Nam sodales, massa id feugiat posuere, dui tortor dictum lorem, et pellentesque nisi dolor
           ac metus. Duis venenatis ipsum ac aliquam dictum. Ut felis quam, efficitur id ultricies sit amet, vestibulum
-          et nibh. Nullam euismod ac dolor sit amet fringilla.</p>
-
-
-      </div>
-
+          et nibh. Nullam euismod ac dolor sit amet fringilla.
+     </p>
     </div>
+   </div>
   </div>
-
   <div id="Footer">
-
   </div>
-
-
-  <script src="../Js/Script.js"></script>
-  <script src="../Js/Parallax.js"></script>
-  <link href="../CSS/Style.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-    crossorigin="anonymous"></script>
-</body>
-
+  <script src="../Js/Script.js">
+  </script>
+  <script src="../Js/Parallax.js">
+  </script>
+  <link href="../CSS/Style.css" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js">
+  </script>
+  <script crossorigin="anonymous" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js">
+  </script>
+ </body>
 </html>
