--- a/Pages/BoardOfTrustees.html
+++ b/Pages/BoardOfTrustees.html
@@ -1,118 +1,160 @@
 <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <title>Site</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src = 'https://code.jquery.com/jquery-3.6.3.min.js'></script>
-      </head>
-<body>
- 
+<html lang="en">
+ <head>
+  <title>
+   Site
+  </title>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js">
+  </script>
+
+ </head>
+ <body>
   <div id="TopContent">
-
   </div>
-
-<!--Introduction of Teachers to students and parents-->
-<div class="container mt-5"> 
-
-  <div class="row storeItem">
-    <h1>Rangeview Board of trustees</h1>
+  <!--Introduction of Teachers to students and parents-->
+  <div class="container mt-5">
+   <div class="row storeItem">
+    <h1>
+     Rangeview Board of trustees
+    </h1>
     <div class="col-sm-2">
-      <div class="card">
-        <img src="../Images/me ong.png"  width="100%">  
-        <h3>Member</h3>
-        <p>Member information.</p>
-      </div>
-    </div>
-    <div class="col-sm-2">
-      <div class="card">
-        <img src="../Images/me ong.png"  width="100%">  
-        <h3>Member</h3>
-        <p>Member information.</p>
-      </div>
+     <div class="card">
+      <img src="../Images/me ong.png" width="100%"/>
+      <h3>
+       Member
+      </h3>
+      <p>
+       Member information.
+      </p>
+     </div>
     </div>
     <div class="col-sm-2">
-      <div class="card">
-        <img src="../Images/me ong.png"  width="100%">  
-        <h3>Member</h3>
-        <p>Member information.</p>
-      </div>
+     <div class="card">
+      <img src="../Images/me ong.png" width="100%"/>
+      <h3>
+       Member
+      </h3>
+      <p>
+       Member information.
+      </p>
+     </div>
     </div>
     <div class="col-sm-2">
-      <div class="card">
-        <img src="../Images/me ong.png"  width="100%">  
-        <h3>Member</h3>
-        <p>Member information.</p>
-      </div>
+     <div class="card">
+      <img src="../Images/me ong.png" width="100%"/>
+      <h3>
+       Member
+      </h3>
+      <p>
+       Member information.
+      </p>
+     </div>
     </div>
     <div class="col-sm-2">
-      <div class="card">
-        <img src="../Images/me ong.png"  width="100%">  
-        <h3>Member</h3>
-        <p>Member information.</p>
-      </div>
+     <div class="card">
+      <img src="../Images/me ong.png" width="100%"/>
+      <h3>
+       Member
+      </h3>
+      <p>
+       Member information.
+      </p>
+     </div>
     </div>
-    <div class="col-sm-2 ">
-      <div class="card">
-        <img src="../Images/me ong.png"  width="100%">  
-        <h3>Member</h3>
-        <p>Member information.</p>
-      </div>
+    <div class="col-sm-2">
+     <div class="card">
+      <img src="../Images/me ong.png" width="100%"/>
+      <h3>
+       Member
+      </h3>
+      <p>
+       Member information.
+      </p>
+     </div>
     </div>
-
+    <div class="col-sm-2">
+     <div class="card">
+      <img src="../Images/me ong.png" width="100%"/>
+      <h3>
+       Member
+      </h3>
+      <p>
+       Member information.
+      </p>
+     </div>
+    </div>
     <div class="col-sm-1">
-      <!--initiates stagger-->
+     <!--initiates stagger-->
     </div>
     <div class="col-sm-2">
-      <div class="card">
-        <img src="../Images/me ong.png"  width="100%">  
-        <h3>Member</h3>
-        <p>Member information.</p>
-      </div>
+     <div class="card">
+      <img src="../Images/me ong.png" width="100%"/>
+      <h3>
+       Member
+      </h3>
+      <p>
+       Member information.
+      </p>
+     </div>
     </div>
     <div class="col-sm-2">
-      <div class="card">
-        <img src="../Images/me ong.png"  width="100%">  
-        <h3>Member</h3>
-        <p>Member information.</p>
-      </div>
+     <div class="card">
+      <img src="../Images/me ong.png" width="100%"/>
+      <h3>
+       Member
+      </h3>
+      <p>
+       Member information.
+      </p>
+     </div>
     </div>
     <div class="col-sm-2">
-      <div class="card">
-        <img src="../Images/me ong.png"  width="100%">  
-        <h3>Member</h3>
-        <p>Member information.</p>
-      </div>
+     <div class="card">
+      <img src="../Images/me ong.png" width="100%"/>
+      <h3>
+       Member
+      </h3>
+      <p>
+       Member information.
+      </p>
+     </div>
     </div>
     <div class="col-sm-2">
-      <div class="card">
-        <img src="../Images/me ong.png"  width="100%">  
-        <h3>Member</h3>
-        <p>Member information.</p>
-      </div>
+     <div class="card">
+      <img src="../Images/me ong.png" width="100%"/>
+      <h3>
+       Member
+      </h3>
+      <p>
+       Member information.
+      </p>
+     </div>
     </div>
     <div class="col-sm-2">
-      <div class="card">
-        <img src="../Images/me ong.png"  width="100%">  
-        <h3>Member</h3>
-        <p>Member information.</p>
-      </div>
+     <div class="card">
+      <img src="../Images/me ong.png" width="100%"/>
+      <h3>
+       Member
+      </h3>
+      <p>
+       Member information.
+      </p>
+     </div>
     </div>
+   </div>
   </div>
-</div>
-
-
-<div id="Footer">
-
-</div>
-
-  
-<script src="../Js/Script.js" ></script>
-<link href="../CSS/Style.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-</body>
-
+  <div id="Footer">
+  </div>
+  <script src="../Js/Script.js">
+  </script>
+  <link href="../CSS/Style.css" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js">
+  </script>
+  <script crossorigin="anonymous" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js">
+  </script>
+ </body>
 </html>
