--- a/Pages/Enrolment.html
+++ b/Pages/Enrolment.html
@@ -1,63 +1,67 @@
 <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <title>Site</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src = 'https://code.jquery.com/jquery-3.6.3.min.js'></script>
-      </head>
-<body>
- 
+<html lang="en">
+ <head>
+  <title>
+   Site
+  </title>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js">
+  </script>
+
+ </head>
+ <body>
   <div id="TopContent">
-
   </div>
-
-    <!--hidden on mobile-->
-    <div class="d-none d-sm-block">
-      <!--<div class="parallaxSection" style='background-image: url("../Images/BirdEyeCropped.jpeg"); height: 35vw;'>-->
-      <div class="parallaxSection" style='background-image: url("../Images/BirdEye.jpeg"); height: 30vw; transform: translate(0,30px);'>
-  
-      </div>
-    </div>
-  
-    <div class="d-block d-sm-none">
-      <div class="parallaxSection"
-        style='  background-size: cover;background-image: url("../Images/BirdEye.jpeg"); height: 35vh; background-position: top;'>
-        <div class="parallaxInner"></div>
-      </div>
-    </div>
-
-<head>
-</head> 
-<body>
-<div class="container mt-5 ">
-  <div class="row">
-      <div class="col-sm-6">
-        <h1>Our School Zone</h1>
-        <div class="removeTop">
-          <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EqWhYqp1Kc-Op2raklXWpSXc05MY9Do&ehbc=2E312F" width="100%" height="540" style=" margin-top:-75px; padding-bottom: -75px;">
-          </iframe> 
-        </div>
-      </div>
-      <div class="col-sm-6" style="padding-top: 10vh;">
-        <h2> Bus Information </h2>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisis mauris sit amet massa vitae tortor. Auctor neque vitae tempus quam pellentesque nec nam aliquam. Vel risus commodo viverra maecenas accumsan. Nulla malesuada pellentesque elit eget gravida. Proin nibh nisl condimentum id venenatis. Pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. Quis commodo odio aenean sed adipiscing diam donec adipiscing. Semper eget duis at tellus at urna. Sit amet dictum sit amet justo donec enim. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Sagittis orci a scelerisque purus.
-        </p>
-      </div>
+  <!--hidden on mobile-->
+  <div class="d-none d-sm-block">
+   <!--<div class="parallaxSection" style='background-image: url("../Images/BirdEyeCropped.jpeg"); height: 35vw;'>-->
+   <div class="parallaxSection" style='background-image: url("../Images/BirdEye.jpeg"); height: 30vw; transform: translate(0,30px);'>
+   </div>
   </div>
-</div>
-
-<div id="Footer">
-
-</div>
-
-<script src="../Js/Parallax.js"></script>
-<script src="../Js/Script.js" ></script>
-<link href="../CSS/Style.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-</body>
-
+  <div class="d-block d-sm-none">
+   <div class="parallaxSection" style='  background-size: cover;background-image: url("../Images/BirdEye.jpeg"); height: 35vh; background-position: top;'>
+    <div class="parallaxInner">
+    </div>
+   </div>
+  </div>
+  <head>
+  </head>
+  <body>
+   <div class="container mt-5">
+    <div class="row">
+     <div class="col-sm-6">
+      <h1>
+       Our School Zone
+      </h1>
+      <div class="removeTop">
+       <iframe height="540" src="https://www.google.com/maps/d/u/0/embed?mid=1EqWhYqp1Kc-Op2raklXWpSXc05MY9Do&amp;ehbc=2E312F" style=" margin-top:-75px; padding-bottom: -75px;" width="100%">
+       </iframe>
+      </div>
+     </div>
+     <div class="col-sm-6" style="padding-top: 10vh;">
+      <h2>
+       Bus Information
+      </h2>
+      <p>
+       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisis mauris sit amet massa vitae tortor. Auctor neque vitae tempus quam pellentesque nec nam aliquam. Vel risus commodo viverra maecenas accumsan. Nulla malesuada pellentesque elit eget gravida. Proin nibh nisl condimentum id venenatis. Pellentesque adipiscing commodo elit at imperdiet dui accumsan sit. Quis commodo odio aenean sed adipiscing diam donec adipiscing. Semper eget duis at tellus at urna. Sit amet dictum sit amet justo donec enim. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin. Sagittis orci a scelerisque purus.
+      </p>
+     </div>
+    </div>
+   </div>
+   <div id="Footer">
+   </div>
+   <script src="../Js/Parallax.js">
+   </script>
+   <script src="../Js/Script.js">
+   </script>
+   <link href="../CSS/Style.css" rel="stylesheet"/>
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js">
+   </script>
+   <script crossorigin="anonymous" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js">
+   </script>
+  </body>
+ </body>
 </html>
