--- a/Pages/Uniform.html
+++ b/Pages/Uniform.html
@@ -1,119 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <title>Site</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src='https://code.jquery.com/jquery-3.6.3.min.js'></script>
-</head>
-
-<body>
-
-
+ <head>
+  <title>
+   Site
+  </title>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js">
+  </script>
+ </head>
+ <body>
   <div id="TopContent">
-
   </div>
-
   <div>
-
-    <div class="container mt-5">
-      <div class="row">
-        <h1>Our Uniform</h1>
-
-
-        <div class="col-sm-7">
-          <div class="row storeItem">
-
-            <div class="col-sm-3" >
-              <div class="card">
-                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
-                <h3>Item</h3>
-                <p>Price</p>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
-                <h3>Item</h3>
-                <p>Price</p>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
-                <h3>Item</h3>
-                <p>Price</p>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
-                <h3>Item</h3>
-                <p>Price</p>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
-                <h3>Item</h3>
-                <p>Price</p>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
-                <h3>Item</h3>
-                <p>Price</p>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
-                <h3>Item</h3>
-                <p>Price</p>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%">
-                <h3>Item</h3>
-                <p>Price</p>
-              </div>
-            </div>
-          </div>          
+   <div class="container mt-5">
+    <div class="row">
+     <h1>
+      Our Uniform
+     </h1>
+     <div class="col-sm-7">
+      <div class="row storeItem">
+       <div class="col-sm-3">
+        <div class="card">
+         <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%"/>
+         <h3>
+          Item
+         </h3>
+         <p>
+          Price
+         </p>
         </div>
-        <div class="col-sm-5">
-          <img src="../Images/Rangeview Uniform 1 .png" style="width: 100%; border: 2px solid gray">
+       </div>
+       <div class="col-sm-3">
+        <div class="card">
+         <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%"/>
+         <h3>
+          Item
+         </h3>
+         <p>
+          Price
+         </p>
         </div>
+       </div>
+       <div class="col-sm-3">
+        <div class="card">
+         <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%"/>
+         <h3>
+          Item
+         </h3>
+         <p>
+          Price
+         </p>
+        </div>
+       </div>
+       <div class="col-sm-3">
+        <div class="card">
+         <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%"/>
+         <h3>
+          Item
+         </h3>
+         <p>
+          Price
+         </p>
+        </div>
+       </div>
+       <div class="col-sm-3">
+        <div class="card">
+         <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%"/>
+         <h3>
+          Item
+         </h3>
+         <p>
+          Price
+         </p>
+        </div>
+       </div>
+       <div class="col-sm-3">
+        <div class="card">
+         <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%"/>
+         <h3>
+          Item
+         </h3>
+         <p>
+          Price
+         </p>
+        </div>
+       </div>
+       <div class="col-sm-3">
+        <div class="card">
+         <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%"/>
+         <h3>
+          Item
+         </h3>
+         <p>
+          Price
+         </p>
+        </div>
+       </div>
+       <div class="col-sm-3">
+        <div class="card">
+         <img src="../Images/272127c4-8d19-4bd3-bd22-2b75ce94ccb4-512.webp" width="100%"/>
+         <h3>
+          Item
+         </h3>
+         <p>
+          Price
+         </p>
+        </div>
+       </div>
       </div>
+     </div>
+     <div class="col-sm-5">
+      <img src="../Images/Rangeview Uniform 1 .png" style="width: 100%; border: 2px solid gray"/>
+     </div>
     </div>
+   </div>
   </div>
-
-<div class="container ">
-  <div class="row">
-
-  <div class="col-sm-12">
-    <h2>Purchasing Uniform</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ipsam ratione saepe vero porro, fugiat earum minima minus facere, nihil enim provident, voluptatibus vitae numquam officiis animi ea laudantium eveniet.</p>
+  <div class="container">
+   <div class="row">
+    <div class="col-sm-12">
+     <h2>
+      Purchasing Uniform
+     </h2>
+     <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ipsam ratione saepe vero porro, fugiat earum minima minus facere, nihil enim provident, voluptatibus vitae numquam officiis animi ea laudantium eveniet.
+     </p>
+    </div>
+   </div>
   </div>
-      
-</div>
-</div>
-
   <div id="Footer">
-
   </div>
-
-
-  <script src="../Js/Script.js"></script>
-  <link href="../CSS/Style.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-    crossorigin="anonymous"></script>
-</body>
-
+  <script src="../Js/Script.js">
+  </script>
+  <link href="../CSS/Style.css" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js">
+  </script>
+  <script crossorigin="anonymous" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js">
+  </script>
+ </body>
 </html>
