favicon and title

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -10,6 +10,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
   <script src="https://code.jquery.com/jquery-3.6.3.min.js">
   </script>
+  <link href="../Images/Rangeview Int logo.png" rel="icon" type="image/x-icon"/>
  </head>
  <body>
   <div id="TopContent">
