--- a/Pages/Digital.html
+++ b/Pages/Digital.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <title>
-   Site
+   Rangeview Intermediate
   </title>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
@@ -10,7 +10,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
   <script src="https://code.jquery.com/jquery-3.6.3.min.js">
   </script>
-
+  <link href="../Images/Rangeview Int logo.png" rel="icon" type="image/x-icon"/>
  </head>
  <body>
   <div id="TopContent">
