--- a/Pages/ExtraCurricular.html
+++ b/Pages/ExtraCurricular.html
@@ -11,6 +11,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
   <script src="https://code.jquery.com/jquery-3.6.3.min.js">
   </script>
+  <link href="../Images/Rangeview Int logo.png" rel="icon" type="image/x-icon"/>
  </head>
  <body style="padding-top: 8vh;">
   <div id="TopContent">
