--- a/Pages/LayoutTop.html
+++ b/Pages/LayoutTop.html
@@ -83,7 +83,7 @@
         <ul class="dropdown-menu animate slideIn">
           <li><a class="dropdown-item" href="Index.html#Dates">Important Dates</a></li>
           <li><a class="dropdown-item" href="Index.html#whatsOn">What's on</a></li>
-          <li><a class="dropdown-item" href="#">Link</a></li>
+          <li><a class="dropdown-item" href="Curriculum.html">Curriculum</a></li>
           <li><a class="dropdown-item" href="Index.html#Pb4l">PB4L</a></li>
           
         </ul>
