--- a/Pages/Staff.html
+++ b/Pages/Staff.html
@@ -1,311 +1,315 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <title>
-   Rangeview Intermediate
-  </title>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  <script src="https://code.jquery.com/jquery-3.6.3.min.js">
-  </script>
-  <link href="../Images/Rangeview Int logo.png" rel="icon" type="image/x-icon"/>
- </head>
- <body>
-  <div id="TopContent">
-  </div>
-  <!--Introduction of Teachers to students and parents-->
-  <div class="container mt-5">
-   <div class="row storeItem">
-    <h1>
-     Rangeview Staff
-    </h1>
-    <div class="col-sm-1 noPic">
-     <!--initiates stagger-->
+
+<head>
+    <title>
+        Rangeview Intermediate
+    </title>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js">
+    </script>
+    <link href="../Images/Rangeview Int logo.png" rel="icon" type="image/x-icon" />
+</head>
+
+<body>
+    <div id="TopContent">
     </div>
-    <div class="col-sm-2">
-     <div class="card">
-      <img src="../Images/me ong.png" width="100%"/>
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
+    <!--Introduction of Teachers to students and parents-->
+    <div class="container mt-5">
+        <div class="row storeItem">
+            <h1>
+                Rangeview Staff
+            </h1>
+            <div class="col-sm-1 noPic">
+                <!--initiates stagger-->
+            </div>
+            <div class="col-sm-2">
+                <div class="card">
+                    <img src="../Images/me ong.png" width="100%" />
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2">
+                <div class="card">
+                    <img src="../Images/me ong.png" width="100%" />
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2">
+                <div class="card">
+                    <img src="../Images/me ong.png" width="100%" />
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2">
+                <div class="card">
+                    <img src="../Images/me ong.png" width="100%" />
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2">
+                <div class="card">
+                    <img src="../Images/me ong.png" width="100%" />
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-1 noPic">
+                <!--initiates stagger-->
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2 noPic">
+                <div class="card">
+                    <h3>
+                        Member
+                    </h3>
+                    <p>
+                        Staff member information.
+                        <br />
+                        Email
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-sm-2">
-     <div class="card">
-      <img src="../Images/me ong.png" width="100%"/>
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
+    <div id="Footer">
     </div>
-    <div class="col-sm-2">
-     <div class="card">
-      <img src="../Images/me ong.png" width="100%"/>
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2">
-     <div class="card">
-      <img src="../Images/me ong.png" width="100%"/>
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2">
-     <div class="card">
-      <img src="../Images/me ong.png" width="100%"/>
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-1 noPic">
-     <!--initiates stagger-->
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-    <div class="col-sm-2 noPic">
-     <div class="card">
-      <h3>
-       Member
-      </h3>
-      <p>
-       Staff member information.
-       <br/>
-       Email
-      </p>
-     </div>
-    </div>
-   </div>
-  </div>
-  <div id="Footer">
-  </div>
-  <script src="../Js/Script.js">
-  </script>
-  <link href="../CSS/Style.css" rel="stylesheet"/>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js">
-  </script>
-  <script crossorigin="anonymous" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js">
-  </script>
- </body>
+    <script src="../Js/Script.js">
+    </script>
+    <link href="../CSS/Style.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js">
+    </script>
+    <script crossorigin="anonymous" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js">
+        </script>
+</body>
+
 </html>
