adjusted curriculum page to not clip text fixed bugged characters (' and -)

--- a/Pages/ExtraCurricular.html
+++ b/Pages/ExtraCurricular.html
@@ -141,7 +141,7 @@
         Netball
        </td>
        <td>
-        Dance â€“ Hip Hop
+        Dance - Hip Hop
        </td>
       </tr>
       <tr>
