--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -203,7 +203,7 @@
             <div class="col-sm-6">
               <p>
                 <strong>
-                  8:40 â€“ 9:10
+                  8:40 - 9:10
                 </strong>
               </p>
             </div>
@@ -218,7 +218,7 @@
             <div class="col-sm-6">
               <p>
                 <strong>
-                  9:10 â€“ 10:15
+                  9:10 - 10:15
                 </strong>
               </p>
             </div>
@@ -233,7 +233,7 @@
             <div class="col-sm-6">
               <p>
                 <strong>
-                  10:15 â€“ 10:40
+                  10:15 - 10:40
                 </strong>
               </p>
             </div>
@@ -248,7 +248,7 @@
             <div class="col-sm-6">
               <p>
                 <strong>
-                  10:40 â€“ 11:45
+                  10:40 - 11:45
                 </strong>
               </p>
             </div>
@@ -263,7 +263,7 @@
             <div class="col-sm-6">
               <p>
                 <strong>
-                  11:45 â€“ 12:50
+                  11:45 - 12:50
                 </strong>
               </p>
             </div>
@@ -278,7 +278,7 @@
             <div class="col-sm-6">
               <p>
                 <strong>
-                  12:50 â€“ 1:00
+                  12:50 - 1:00
                 </strong>
               </p>
             </div>
@@ -293,7 +293,7 @@
             <div class="col-sm-6">
               <p>
                 <strong>
-                  1:00 â€“ 1:45
+                  1:00 - 1:45
                 </strong>
               </p>
             </div>
@@ -308,7 +308,7 @@
             <div class="col-sm-6">
               <p>
                 <strong>
-                  1:45 â€“ 1:55
+                  1:45 - 1:55
                 </strong>
               </p>
             </div>
@@ -323,7 +323,7 @@
             <div class="col-sm-6">
               <p>
                 <strong>
-                  1:55 â€“ 3:00
+                  1:55 - 3:00
                 </strong>
               </p>
             </div>
@@ -338,7 +338,7 @@
             <div class="col-sm-6">
               <p>
                 <strong>
-                  3:00 â€“ 3:10
+                  3:00 - 3:10
                 </strong>
               </p>
             </div>
@@ -362,28 +362,28 @@
               Term 1
             </h4>
             <p>
-              Thursday 2 February â€“ Thursday 6 April
+              Thursday 2 February - Thursday 6 April
             </p>
             <hr />
             <h4>
               Term 2
             </h4>
             <p>
-              Wednesday 26 April â€“ Friday 30 June
+              Wednesday 26 April - Friday 30 June
             </p>
             <hr />
             <h4>
               Term 3
             </h4>
             <p>
-              Monday 17 July â€“ Friday 22 September
+              Monday 17 July - Friday 22 September
             </p>
             <hr />
             <h4>
               Term 4
             </h4>
             <p>
-              Monday 9 October â€“ Tuesday 19 December
+              Monday 9 October - Tuesday 19 December
             </p>
           </div>
         </div>
@@ -419,7 +419,7 @@
             </div>
             <div class="col-sm-6">
               <p style="border: none;">
-                Friday 7 April â€“ Tuesday 11 April
+                Friday 7 April - Tuesday 11 April
               </p>
             </div>
           </div>
@@ -458,7 +458,7 @@
             <div class="col-sm-6">
               <p>
                 <strong>
-                  Kingâ€™s Birthday
+                  King's Birthday
                 </strong>
               </p>
             </div>
