--- a/Pages/Curriculum.html
+++ b/Pages/Curriculum.html
@@ -29,7 +29,7 @@
     <div class="row">
       <div class="col-sm-12" style="margin-top: -100px;">
         <h1
-          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translateX(-50%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
+          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translate(-60%, 0%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
           Arts</h1>
         <img src="../Images/art-room1.jpeg" style="width: 100%; " />
 
@@ -76,7 +76,7 @@
     <div class="row">
       <div class="col-sm-12" style="margin-top: -100px;">
         <h1
-          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translateX(-50%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
+          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translate(-60%, 0%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
           Science</h1>
         <div style="display: flex; justify-content: center;width: 100%;">
           <img src="../Images/image0-768x1024.jpeg" style="width: 33.5%; " />
@@ -111,7 +111,7 @@
     <div class="row">
       <div class="col-sm-12" style="margin-top: -100px;">
         <h1
-          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translateX(-50%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
+          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translate(-60%, 0%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
           Technology</h1>
         <img src="../Images/food-tech1.jpg" style="width: 100%; " />
 
@@ -169,8 +169,8 @@
     <div class="row">
       <div class="col-sm-12" style="margin-top: -100px;">
         <h1
-          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translateX(-50%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
-          Health and Physical Education</h1>
+          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translate(-60%, 0%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
+          Health/PE</h1>
         <img src="../Images/health-and-pe1.jpg" style="width: 100%; " />
 
       </div>
@@ -216,7 +216,7 @@
     <div class="row">
       <div class="col-sm-12" style="margin-top: -100px;">
         <h1
-          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translateX(-50%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
+          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform:translate(-60%, 0%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
           Pituku</h1>
         <img src="../Images/Pituku.PNG" style="width: 100%; " />
 
@@ -249,7 +249,7 @@
     <div class="row">
       <div class="col-sm-12" style="margin-top: -100px;">
         <h1
-          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translateX(-50%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
+          style="width: fit-content;font-size: 3.5rem;color:white; position:relative;left:50%;top:50%; transform: translate(-60%, 0%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
           Mathematics</h1>
         <img src="../Images/Math-top-image1.jpeg" style="width: 100%; " />
 
@@ -293,7 +293,7 @@
     <div class="row">
       <div class="col-sm-12" style="margin-top: -100px;">
         <h1
-          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translateX(-50%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
+          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translate(-60%, 0%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
           Languages</h1>
         <img src="../Images/Languages1.jpeg" style="width: 100%; " />
 
@@ -351,7 +351,7 @@
     <div class="row">
       <div class="col-sm-12" style="margin-top: -100px;">
         <h1
-          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translateX(-50%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
+          style="width: fit-content;font-size: 4rem;color:white; position:relative;left:50%;top:50%; transform: translate(-60%, 0%);text-shadow: 0px 0px 12px #000000,0px 0px 12px #000000;">
           Integrated Literacies</h1>
         <img src="../Images/Literacy-top-image1.jpeg" style="width: 100%; " />
 
